Release 0.26 - March ?, 2005

Features added:
- Save button is disabled when saving is not necessary (1164472).

Bugs fixed:
- Marking a task completed did not stop effort tracking (1159918).



Release 0.25 - March 13, 2005 

Bugs fixed:
- The menu item 'Effort' -> 'New effort' did not work in release 0.24.

Features added:
- XML export now includes effort records.
- Effort per day, per week and per month view now also show total time 
  spent (i.e. time including time spent on subtasks). 



Release 0.24 - March 10, 2005

Bugs fixed:
- Saving a selection of tasks to a separate file would also save all effort 
  records to that file (instead of just the effort records for the selected 
  tasks), giving errors when loading that file.
- Deleting a task with effort records would not delete the effort
  records.

Features added:
- The tracking status of tasks is saved. So if you start tracking a
  task, quit Task Coach, and restart Task Coach later, effort for that 
  task is still being tracked. Requested by Bob Hossley.



Release 0.23 - February 20, 2005

Bugs fixed:
- Fixed a couple of bugs in the unit tests, discovered by Stephen Boulet
  and Jerome Laheurte on the Linux platform.



Release 0.22 - February 17, 2005

Bugs fixed:
- In the effort summary view, effort spent on a task in the same month
  or week but in different years would erroneously be added. 
  E.g. effort in January 2004 and January 2006 would be added. 
- The mechanism to prevent effort periods with a negative duration (i.e.
  a start time later than the stop time) in the effort editor was
  invoked on each key stroke which caused inconvenient behaviour. Fixed
  it by only invoking it when the user leaves the text or combo box.

Features added:
- Added possibility to start tracking effort for a task, with start time
  equal to the end time of the previous effort period. This is for
  example convenient if you stop working on a task and then spend